@@ -1,3 +1,8 @@
+2007-05-11  Shawn Betts  <sabetts@shitbender.gagrod>
+
+	* stumpwm.lisp (stumpwm-internal-loop): don't ungrab the keyboard
+	when entering the debugger.
+
 2007-05-10  Shawn Betts  <sabetts@shitbender.gagrod>
 
 	* core.lisp (:key-press): ungrab the keyboard after reading the key.
